--- a/css/main.css
+++ b/css/main.css
@@ -26,28 +26,28 @@ a{color:inherit;text-decoration:none;transition:all .4s}
 a:hover,a:focus,a:active{color:#00a287}
 
 /* CSS Document Conten */
-.agus-conten-warp {display: grid;max-width:850px; margin:0 auto;}
-.agus-conten-left {float:left;height: 100vh;position: fixed;width: 200px;background-color: #f3f3f3;color:#5c5c5c;}
-.agus-conten-left img {padding-top:50px;max-width: 100%;border-radius: 4px;/*filter: grayscale(1);*/}
+.rifky-conten-warp {display: grid;max-width:850px; margin:0 auto;}
+.rifky-conten-left {float:left;height: 100vh;position: fixed;width: 200px;background-color: #f3f3f3;color:#5c5c5c;}
+.rifky-conten-left img {padding-top:50px;max-width: 100%;border-radius: 4px;/*filter: grayscale(1);*/}
 /*.agus-conten-left img:hover {filter: grayscale(0);}*/
-.agus-conten-left-img-warp {padding: 10px}
-.agus-conten-left ul {list-style:none;}
-.agus-conten-left li {margin:10px;}
-.agus-conten-left-copy {font-size: 13px;font-weight: 600;width: 100%;position: absolute;bottom: 1px;text-align: center;padding: 10px;background-color: #00a287;color: #fff;}
+.rifky-conten-left-img-warp {padding: 10px}
+.rifky-conten-left ul {list-style:none;}
+.rifky-conten-left li {margin:10px;}
+.rifky-conten-left-copy {font-size: 13px;font-weight: 600;width: 100%;position: absolute;bottom: 1px;text-align: center;padding: 10px;background-color: #00a287;color: #fff;}
 /*.agus-conten-left-copy:hover {background-color: #00a287;color: #fff;}*/
 
-.agus-conten-right {float: right;max-width: 75%;margin-left: 10px;width:100%;}
-.agus-conten-right h2 {color: #777;font-size: 20px;margin-top: 30px;margin-bottom: 10px;margin-left: 10px;}
-.agus-conten-right-data {font-size: 13px;padding: 10px;color:#00a287;background-color: #f3f3f3;margin-bottom: 3px;}
+.rifky-conten-right {float: right;max-width: 75%;margin-left: 10px;width:100%;}
+.rifky-conten-right h2 {color: #777;font-size: 20px;margin-top: 30px;margin-bottom: 10px;margin-left: 10px;}
+.rifky-conten-right-data {font-size: 13px;padding: 10px;color:#00a287;background-color: #f3f3f3;margin-bottom: 3px;}
 
 /* CSS Document Responsive */
 @media only screen and (max-width: 820px) {
-	.agus-conten-left {float:none;position:inherit;width:100%;text-align:center;height: auto;}
-	.agus-conten-right {float:none;max-width:100%;margin-left: 0px;padding:5px;}
-	.agus-conten-right-data {width:100%}
-	.agus-conten-right h2 {margin-left: 0px;}
-	.agus-conten-left img {max-width: 16%;}
-	.agus-conten-left-copy {position:inherit;}}
+	.rifky-conten-left {float:none;position:inherit;width:100%;text-align:center;height: auto;}
+	.rifky-conten-right {float:none;max-width:100%;margin-left: 0px;padding:5px;}
+	.rifky-conten-right-data {width:100%}
+	.rifky-conten-right h2 {margin-left: 0px;}
+	.rifky-conten-left img {max-width: 16%;}
+	.rifky-conten-left-copy {position:inherit;}}
 @media only screen and (max-width: 335px) {
-	.agus-conten-left img {max-width: 50%;}}
+	.rifky-conten-left img {max-width: 50%;}}
 	
