--- a/css/main.css
+++ b/css/main.css
@@ -23,7 +23,7 @@ h2 {
 p {display: block;color: #999;-webkit-margin-before: 0em;-webkit-margin-after: 0em;-webkit-margin-start: 0px;-webkit-margin-end: 0px;}
 *{box-sizing:border-box}
 a{color:inherit;text-decoration:none;transition:all .4s}
-a:hover,a:focus,a:active{color:#00a287}
+a:hover,a:focus,a:active{color:#0885d8}
 
 /* CSS Document Conten */
 .rifky-conten-warp {display: grid;max-width:850px; margin:0 auto;}
@@ -33,12 +33,12 @@ a:hover,a:focus,a:active{color:#00a287}
 .rifky-conten-left-img-warp {padding: 10px}
 .rifky-conten-left ul {list-style:none;}
 .rifky-conten-left li {margin:10px;}
-.rifky-conten-left-copy {font-size: 13px;font-weight: 600;width: 100%;position: absolute;bottom: 1px;text-align: center;padding: 10px;background-color: #00a287;color: #fff;}
-/*.agus-conten-left-copy:hover {background-color: #00a287;color: #fff;}*/
+.rifky-conten-left-copy {font-size: 13px;font-weight: 600;width: 100%;position: absolute;bottom: 1px;text-align: center;padding: 10px;background-color: #0885d8;color: #fff;}
+/*.agus-conten-left-copy:hover {background-color: #0885d8;color: #fff;}*/
 
 .rifky-conten-right {float: right;max-width: 75%;margin-left: 10px;width:100%;}
 .rifky-conten-right h2 {color: #777;font-size: 20px;margin-top: 30px;margin-bottom: 10px;margin-left: 10px;}
-.rifky-conten-right-data {font-size: 13px;padding: 10px;color:#00a287;background-color: #f3f3f3;margin-bottom: 3px;}
+.rifky-conten-right-data {font-size: 13px;padding: 10px;color:#0885d8;background-color: #f3f3f3;margin-bottom: 3px;}
 
 /* CSS Document Responsive */
 @media only screen and (max-width: 820px) {
